Fix designs following the QA List (#586)
* Change wrong Create New Collection button text

* Make scroll bar be moved after navigating to #references or #cited papers of paper

* Change wrong position of the paper item additional dropdown

* Fix wrong position of the h-index tooltip

* Fix wrong position of the X mark in Add Paper to Collection dialog

* Add margin to prevent the collection title overflows collection control buttons

* Change wrong design of search filter box

* Change the position of the sort box

* Change wrong design of the author/journal's paper sort box

* Update snapshot

--- a/app/components/articleSearch/components/filterContainer/filterContainer.scss
+++ b/app/components/articleSearch/components/filterContainer/filterContainer.scss
@@ -26,9 +26,9 @@
   position: relative;
   display: block;
   font-size: 14px;
-  color: $black0;
+  color: $gray6;
   margin-top: 8px;
-  line-height: 20px;
+  line-height: 16px;
   cursor: pointer;
 
   &:first-of-type {
@@ -182,11 +182,12 @@
 
 .checkboxIcon {
   display: inline-flex;
-  margin-right: 8px;
+  padding: 0;
+  padding-bottom: 4px;
+  margin-right: 4px;
   width: 20px;
   height: 20px;
   color: $gray5 !important;
-  padding: 0;
 
   svg {
     font-size: 17px;
