--- a/app/components/collections/collections.scss
+++ b/app/components/collections/collections.scss
@@ -87,6 +87,7 @@ $collections-container-width: 793px;
     font-weight: bold;
     line-height: 1.38;
     color: $navy0;
+    margin-right: 80px;
     margin-bottom: 9px;
   }
 
